# DrugChat_openFDA

./: .env  README.md  pyproject.toml  requirements.txt
AI_openFDA/: pyproject.toml
AI_openFDA/src/ai_openfda/: config.py  main.py  search_info.py
AI_openFDA/src/ai_openfda/DB_v2/: index.pkl
AI_openFDA/src/ai_openfda/chain/: chains.py  loader.py  prompts.py
instruction_file/DB_v2/: Instructions.pkl  index.faiss
